--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -19,7 +19,7 @@ jobs:
     name: Initialize
     outputs:
       pr: ${{ steps.pr.outputs.pr }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
         # Get PR number for squash merges to main
       - id: pr
@@ -48,7 +48,7 @@ jobs:
   promote:
     name: Promote Images
     needs: [init, deploys-prod]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: shrink/actions-docker-registry-tag@v4
         with:
