--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,14 +107,16 @@ services:
         condition: service_completed_successfully
 
   postgres-data-load:
+    image: python:3.13.0-slim-bookworm
     container_name: postgres-data-load
-    build:
-      context: .
-      dockerfile: Dockerfile.pg_ingest
-    command: ["python", "db_env_utils/main_spar_ingest.py", "TEST"]
-    working_dir: /app
+    entrypoint: ["/application/docker_run_SPAR_TEST.sh"]
+    working_dir: /application
     volumes:
-      - "./data_prep/docker_data:/app/data"
+      - "./data_prep:/application"
+      - "./poetry.lock:/application/poetry.lock"
+      - "./pyproject.toml:/application/pyproject.toml"
+      - "./docker-compose.yml:/application/docker-compose.yml"
+      - "./data:/application/data"
     env_file:
       - ".env"
     environment:
@@ -150,7 +152,7 @@ services:
     container_name: oracle-migrations
     command: info migrate info
     volumes:
-      - "./data_prep/migrations_ora/sql:/flyway/sql:ro"
+      - "./migrations_ora/sql:/flyway/sql:ro"
     environment:
       <<: *oracle-vars
       FLYWAY_USER: *ORACLE_USER
@@ -162,14 +164,17 @@ services:
         condition: service_healthy
 
   oracle-data-load:
+    image: python:3.13-slim-bookworm
     container_name: oracle-data-load
-    build:
-      context: .
-      dockerfile: Dockerfile.ora_ingest
-    command: ["python", "db_env_utils/main_ora_ingest.py", "TEST"]
-    # working_dir: /app
+    # "CMD",
+    entrypoint: [ "/application/docker_run_ORA_TEST.sh"]
+    working_dir: /application
     volumes:
-      - "./data_prep/docker_data:/app/data"
+      - "./data_prep:/application"
+      - "./poetry.lock:/application/poetry.lock"
+      - "./pyproject.toml:/application/pyproject.toml"
+      - "./docker-compose.yml:/application/docker-compose.yml"
+      - "./data:/application/data"
     environment:
       <<: [*oracle-vars]
     env_file:
