fix: save from stash

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "name": "spar-extract-test",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/data_prep/main_spar_extract.py",
+            "program": "${workspaceFolder}/data_prep/db_env_utils/main_spar_extract.py",
             "console": "integratedTerminal",
             "envFile": "${workspaceFolder}/.env",
             "args": [
@@ -27,7 +27,7 @@
             "name": "spar-ingest-test",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/data_prep/main_spar_ingest.py",
+            "program": "${workspaceFolder}/data_prep/db_env_utils/main_spar_ingest.py",
             "console": "integratedTerminal",
             "envFile": "${workspaceFolder}/.env",
             "args": [
@@ -38,7 +38,7 @@
             "name": "spar-extract-prod",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/data_prep/main_spar_extract.py",
+            "program": "${workspaceFolder}/data_prep/db_env_utils/main_spar_extract.py",
             "console": "integratedTerminal",
             "envFile": "${workspaceFolder}/.env",
             "args": [
@@ -49,7 +49,7 @@
             "name": "spar-ingest-prod",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/data_prep/main_spar_ingest.py",
+            "program": "${workspaceFolder}/data_prep/db_env_utils/main_spar_ingest.py",
             "console": "integratedTerminal",
             "envFile": "${workspaceFolder}/.env",
             "args": [
@@ -60,7 +60,7 @@
             "name": "oracle-extract-prod",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/data_prep/main_ora_extract.py",
+            "program": "${workspaceFolder}/data_prep/db_env_utils/main_ora_extract.py",
             "console": "integratedTerminal",
             "envFile": "${workspaceFolder}/.env",
             "args": [
@@ -68,10 +68,21 @@
             ]
         },
         {
+            "name": "oracle-extract-test",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/data_prep/db_env_utils/main_ora_extract.py",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env",
+            "args": [
+                "TEST"
+            ]
+        },
+        {
             "name": "oracle-ingest-test",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/data_prep/main_ora_ingest.py",
+            "program": "${workspaceFolder}/data_prep/db_env_utils/main_ora_ingest.py",
             "console": "integratedTerminal",
             "envFile": "${workspaceFolder}/.env",
             "args": [
