--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,11 @@ x-var:
   - &ORACLE_DATABASE
     DBDOCK_01
   - &ORACLE_HOST
-    oracle
+    oracle-spar
   - &ORACLE_PORT
     1521
   - &ORACLE_FLYWAY_URL
-    jdbc:oracle:thin:@//oracle:1521/DBDOCK_01
+    jdbc:oracle:thin:@//oracle-spar:1521/DBDOCK_01
 
 
 
@@ -107,14 +107,16 @@ services:
         condition: service_completed_successfully
 
   postgres-data-load:
+    image: python:3.13.0-slim-bookworm
     container_name: postgres-data-load
-    build:
-      context: .
-      dockerfile: Dockerfile.pg_ingest
-    command: ["python", "db_env_utils/main_spar_ingest.py", "TEST"]
-    working_dir: /app
+    entrypoint: ["/application/docker_run_SPAR_TEST.sh"]
+    working_dir: /application
     volumes:
-      - "./data_prep/docker_data:/app/data"
+      - "./data_prep:/application"
+      - "./poetry.lock:/application/poetry.lock"
+      - "./pyproject.toml:/application/pyproject.toml"
+      - "./docker-compose.yml:/application/docker-compose.yml"
+      - "./data:/application/data"
     env_file:
       - ".env"
     environment:
@@ -124,11 +126,11 @@ services:
         condition: service_completed_successfully
 
   # Name of the Docker Compose service
-  oracle:
+  oracle-spar:
     # Docker Hub image (feel free to change the tag "latest" to any other available one)
     image: gvenzl/oracle-free:latest
     # Forward Oracle port to localhost
-    container_name: oracle
+    container_name: oracle-spar
     ports:
       - "1521:1521"
     # Provide passwords and other environment variables to the container
@@ -143,7 +145,7 @@ services:
     # Mount a local SQL file to initialize your schema at startup
     volumes:
       - oracle-data:/opt/oracle/oradata  # Mount the volume to the Oracle data directory
-      - ./oradb/db_init/db_init.sql:/container-entrypoint-initdb.d/my-init.sql:ro
+      - ./data_prep/ora_db_init/db_init/db_init.sql:/container-entrypoint-initdb.d/my-init.sql:ro
 
   oracle-migrations:
     image: flyway/flyway:10-alpine
@@ -158,18 +160,21 @@ services:
       FLYWAY_DEFAULT_SCHEMA: *ORACLE_USER
       FLYWAY_BASELINE_ON_MIGRATE: true
     depends_on:
-      oracle:
+      oracle-spar:
         condition: service_healthy
 
   oracle-data-load:
+    image: python:3.13-slim-bookworm
     container_name: oracle-data-load
-    build:
-      context: .
-      dockerfile: Dockerfile.ora_ingest
-    command: ["python", "db_env_utils/main_ora_ingest.py", "TEST"]
-    # working_dir: /app
+    # "CMD",
+    entrypoint: [ "/application/docker_run_ORA_TEST.sh"]
+    working_dir: /application
     volumes:
-      - "./data_prep/docker_data:/app/data"
+      - "./data_prep:/application"
+      - "./poetry.lock:/application/poetry.lock"
+      - "./pyproject.toml:/application/pyproject.toml"
+      - "./docker-compose.yml:/application/docker-compose.yml"
+      - "./data:/application/data"
     environment:
       <<: [*oracle-vars]
     env_file:
@@ -193,7 +198,7 @@ services:
     container_name: sync
     build:
       context: sync
-      dockerfile: Dockerfile.slim
+      dockerfile: Dockerfile
     environment:
       <<: [*postgres-vars, *oracle-vars]
       TEST_MODE: false
