feat: add the script to identify client foreign key issues

--- a/data_prep/db_env_utils/logging.config
+++ b/data_prep/db_env_utils/logging.config
@@ -1,7 +1,7 @@
 [loggers]
 keys=root,main_ora_extract,main_ora_injest,oradb_lib,docker_parser,async_loader,
     object_store,env_config,main_common,kubernetes_wrapper,main_spar_extract,
-    postgresdb_lib, constants,db_lib
+    postgresdb_lib, constants,db_lib,fix_forest_client_fk_violation
 
 [handlers]
 keys=consoleHandler
@@ -93,7 +93,11 @@ handlers=consoleHandler
 qualname=db_lib
 propagate=0
 
-
+[logger_fix_forest_client_fk_violation]
+level=DEBUG
+handlers=consoleHandler
+qualname=fix_forest_client_fk_violation
+propagate=0
 
 #----- HANDLERS
 
