fix: deal with sonar

--- a/data_prep/ora_db_init/Dockerfile
+++ b/data_prep/ora_db_init/Dockerfile
@@ -1,6 +1,6 @@
 FROM gvenzl/oracle-free:23.5-slim-faststart
 
-COPY --chown=oracle:oracle removeDatabase ${ORACLE_BASE}/removeDatabase
+COPY --chown=oracle:oracle --chmod=755 removeDatabase ${ORACLE_BASE}/removeDatabase
 RUN chmod +x ${ORACLE_BASE}/removeDatabase
 
 USER root
