--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,4 +33,5 @@
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
+    "terminal.integrated.scrollback": 10000,
 }
