--- a/Dockerfile.data_load
+++ b/Dockerfile.data_load
@@ -28,28 +28,14 @@ ENV UV_COMPILE_BYTECODE=1
 # Copy from the cache instead of linking since it's a mounted volume
 ENV UV_LINK_MODE=copy
 
-# Install the project's dependencies using the lockfile and settings
-# RUN --mount=type=cache,target=/root/.cache/uv \
-#     --mount=type=bind,source=data_prep/uv.lock,target=uv.lock \
-#     --mount=type=bind,source=data_prep/pyproject.toml,target=pyproject.toml \
-#     uv sync --frozen --no-install-project --no-dev
-
 COPY data_prep/pyproject.toml data_prep/uv.lock /app/
 RUN uv sync --frozen --no-install-project --no-dev
 
-# arrow version is 1801
-# FROM ghcr.io/astral-sh/uv:python3.13-alpine as runtime
 FROM  ghcr.io/astral-sh/uv:python3.13-bookworm-slim as runtime
 
-# RUN apt-get update && \
-#     apt install -y \
-#         libarrow \
-#         libparquet
-
-# RUN apk add --no-cache \
-#     libstdc++ \
-#     apache-arrow \
-#     bash
+RUN apt-get update && \
+    apt install -y \
+    postgresql-client
 
 COPY --from=builder /app/.venv /app/.venv
 
