--- a/Dockerfile.data_load
+++ b/Dockerfile.data_load
@@ -1,26 +1,13 @@
 # Use a Python image with uv pre-installed
-# FROM ghcr.io/astral-sh/uv:python3.13-alpine as builder
 FROM  ghcr.io/astral-sh/uv:python3.13-bookworm-slim as builder
+
 # Install the project into `/app`
 WORKDIR /app
 
-# RUN apk add --no-cache \
-#     cmake \
-#     make \
-#     gcc \
-#     g++ \
-#     musl-dev \
-#     linux-headers \
-#     git \
-#     bash \
-#     libstdc++ \
-#     apache-arrow \
-#     apache-arrow-dev
-
+# get the build dependencies
 RUN apt-get update && \
     apt install -y \
         build-essential
-
 
 # Enable bytecode compilation
 ENV UV_COMPILE_BYTECODE=1
@@ -31,31 +18,25 @@ ENV UV_LINK_MODE=copy
 COPY data_prep/pyproject.toml data_prep/uv.lock /app/
 RUN uv sync --frozen --no-install-project --no-dev
 
+# Second stage... copy the venv to final image
 FROM  ghcr.io/astral-sh/uv:python3.13-bookworm-slim as runtime
 
 RUN apt-get update && \
     apt install -y \
     postgresql-client
 
+RUN groupadd -r derek && useradd -r -g derek derek
+
 COPY --from=builder /app/.venv /app/.venv
 
 # Then, add the rest of the project source code and install it
 # Installing separately from its dependencies allows optimal layer caching
 # ADD . /app
-COPY data_prep/ /app/
-
-# RUN --mount=type=cache,target=/root/.cache/uv \
-#     uv sync --frozen --no-dev
+COPY --chown=derek:derek data_prep/ /app/
 
 # Place executables in the environment at the front of the path
 ENV PATH="/app/.venv/bin:$PATH"
 
-# Reset the entrypoint, don't invoke `uv`
-RUN python --version
-RUN ls -la
+USER derek
 ENTRYPOINT []
 
-# Run the FastAPI application by default
-# Uses `fastapi dev` to enable hot-reloading when the `watch` sync occurs
-# Uses `--host 0.0.0.0` to allow access from outside the container
-# CMD ["fastapi", "dev", "--host", "0.0.0.0", "src/uv_docker_example"]
