--- a/Dockerfile.data_load
+++ b/Dockerfile.data_load
@@ -23,7 +23,8 @@ FROM  ghcr.io/astral-sh/uv:python3.13-bookworm-slim as runtime
 
 RUN apt-get update && \
     apt install -y \
-    postgresql-client
+    postgresql-client \
+    && apt-get clean
 
 RUN groupadd -r derek && useradd -r -g derek derek
 
@@ -32,7 +33,7 @@ COPY --from=builder /app/.venv /app/.venv
 # Then, add the rest of the project source code and install it
 # Installing separately from its dependencies allows optimal layer caching
 # ADD . /app
-COPY --chown=derek:derek data_prep/ /app/
+COPY --chown=root:root --chmod=755 data_prep/ /app/
 
 # Place executables in the environment at the front of the path
 ENV PATH="/app/.venv/bin:$PATH"
