--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -22,20 +22,16 @@ jobs:
           tag_fallback: latest
           triggers: ('sync/')
 
-  # Will address this when move the actual sync job to this repository.
-  # deploys:
-  #   name: Deploys (${{ github.event.number }})
-  #   needs: [builds]
-  #   secrets: inherit
-  #   uses: ./.github/workflows/.deploy.yml
+  deploys:
+    name: Deploys (${{ github.event.number }})
+    needs: [builds]
+    secrets: inherit
+    uses: ./.github/workflows/.deploy.yml
 
   results:
     name: PR Results
     if: always()
-    # Include all needs that could have failures!
-    # remove deploys until got the actual sync job running in this repo
-    # [builds, deploys]
-    needs: [builds]
+    needs: [builds, deploys]
     runs-on: ubuntu-24.04
     steps:
       - run: |
