Job names, test run

--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -9,8 +9,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  builds:
-    name: Builds
+  build:
+    name: Build
     runs-on: ubuntu-24.04
     permissions:
       packages: write
@@ -22,24 +22,18 @@ jobs:
           tag_fallback: latest
           triggers: ('sync/')
 
-  deploys:
-    name: Deploys (${{ github.event.number }})
-    needs: [builds]
+  deploy:
+    name: Deploy (${{ github.event.number }})
+    needs: [build]
     secrets: inherit
     uses: ./.github/workflows/.deploy.yml
 
   results:
     name: PR Results
     if: always()
-    needs: [builds, deploys]
+    needs: [build, deploy]
     runs-on: ubuntu-24.04
-    steps:
-      - run: |
-          # View results
-          echo "needs.*.result: ${{ toJson(needs.*.result) }}"
-
+   steps:
       - if: contains(needs.*.result, 'failure')||contains(needs.*.result, 'canceled')
-        run: |
-          # Job failure found
-          echo "At least one job has failed"
-          exit 1
+        run: echo "At least one job has failed." && exit 1
+      - run: echo "Success!"
