--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -57,5 +57,4 @@ jobs:
           oc_server: ${{ vars.OC_SERVER }}
           oc_token: ${{ secrets.OC_TOKEN }}
           triggers: ('sync/')
-          command: |
-            ./sync/oc_run.sh ${{ inputs.tag }} ${{ secrets.oc_token }}
+          command: ./sync/oc_run.sh ${{ inputs.tag }} ${{ secrets.oc_token }}
