Set up secrets and parameters

--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -46,6 +46,8 @@ jobs:
           parameters:
             -p TAG=${{ inputs.tag }}
             -p ZONE=${{ inputs.target }}
+            -p ORACLE_SYNC_PASSWORD=${{ secrets.ORACLE_SYNC_PASSWORD }}
+            -p POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
             ${{ github.event_name == 'pull_request' && '-p TEST_MODE=true' || '' }}
           triggers: ('sync/')
 
