--- a/sync/openshift.deploy.yml
+++ b/sync/openshift.deploy.yml
@@ -57,7 +57,7 @@ parameters:
     description: Source container registry
     value: ghcr.io
   - name: POSTGRES_PORT
-    value: 5432
+    value: "5432"
 
 objects:
   - kind: CronJob
