Fix repo in template

--- a/sync/openshift.deploy.yml
+++ b/sync/openshift.deploy.yml
@@ -28,7 +28,7 @@ parameters:
     value: bcgov
   - name: REPO
     description: Repository name
-    value: nr-spar
+    value: nr-fds-pyetl
   - name: TEST_MODE
     description: "Run in test mode"
     value: "false"
