--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -29,12 +29,28 @@ on:
         value: ${{ jobs.init.outputs.deploy_core }}
 
 jobs:
-  # ETL testing will only run on Pull Requests if the sync/ directory is modified
   sync:
+    # Deployments only run on Pull Requests if the sync/ directory is modified
     name: Deploy
     environment: ${{ inputs.environment }}
     runs-on: ubuntu-24.04
     steps:
+      - name: Database
+        uses: bcgov/action-deployer-openshift@v3.1.0
+        with:
+          oc_namespace: ${{ vars.OC_NAMESPACE }}
+          oc_server: ${{ vars.OC_SERVER }}
+          oc_token: ${{ secrets.OC_TOKEN }}
+          file: common/openshift.database.yml
+          overwrite: false
+          parameters:
+            -p ZONE=${{ inputs.target }}
+            ${{ github.event_name == 'pull_request' && '-p DB_PVC_SIZE=192Mi' || '' }}
+            ${{ github.event_name == 'pull_request' && '-p MEMORY_REQUEST=100Mi' || '' }}
+            ${{ github.event_name == 'pull_request' && '-p MEMORY_LIMIT=200Mi' || '' }}
+          repository: bcgov/nr-spar
+          triggers: ('sync/')
+
       - name: Deploy (sync)
         uses: bcgov/action-deployer-openshift@v3.0.1
         with:
