--- a/sync/openshift.deploy.yml
+++ b/sync/openshift.deploy.yml
@@ -58,8 +58,8 @@ objects:
         app: ${REPO}-${ZONE}
         cronjob: ${REPO}-${ZONE}
     spec:
-      # 00:00 on day-of-month 1 in every 12000th month from January through December
-      schedule: "0 0 31 2/12000 0" # https://crontab.guru/#0_0_1_1/12000_*
+      # At 00:00 on day-of-month 31 in February
+      schedule: "0 0 31 2/12000 0" # https://crontab.guru/#0_0_31_2_*
       startingDeadlineSeconds: 60
       concurrencyPolicy: "Replace"
       successfulJobsHistoryLimit: "${{JOB_HISTORY_SUCCESS}}"
